add /playlists and /courses
